--- a/scraping/.env.example
+++ b/scraping/.env.example
@@ -1,4 +1,30 @@
+# Server Configuration (optional for health checks)
 SERVER_HOST="localhost"
 SERVER_PORT="3000"
 
-DATABASE_URL="postgresql://postgres:dev@127.0.0.1:5432/nest-starter?schema=nest-starter"
+# Database Configuration
+DATABASE_URL="postgresql://postgres:dev@127.0.0.1:5432/polymarket-scraper?schema=public"
+
+# Polymarket API Endpoints (optional, defaults provided)
+# POLYMARKET_DATA_ENDPOINT="https://data-api.polymarket.com"
+# POLYMARKET_GAMMA_ENDPOINT="https://gamma-api.polymarket.com"
+
+# Scraper Configuration (optional, defaults provided)
+# MARKETS_BATCH_SIZE="100"
+# COMMENTS_BATCH_SIZE="50"
+
+# Rate Limiting (per 10 seconds)
+# GAMMA_GENERAL_RATE_LIMIT="750"
+# GAMMA_MARKETS_RATE_LIMIT="100"
+# GAMMA_COMMENTS_RATE_LIMIT="100"
+
+# Concurrency Settings
+# MAX_CONCURRENT_MARKET_REQUESTS="5"
+# MAX_CONCURRENT_COMMENT_REQUESTS="3"
+
+# Retry Configuration
+# MAX_RETRIES="3"
+# RETRY_DELAY_MS="1000"
+
+# Logging
+# VERBOSE_LOGGING="false"
