--- a/scraping/package.json
+++ b/scraping/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nest-starter",
-  "version": "0.0.1",
-  "description": "",
+  "name": "polymarket-scraper",
+  "version": "1.0.0",
+  "description": "CLI tool for scraping Polymarket data (markets, comments, and price history)",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
@@ -13,7 +13,6 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "graphql:generate": "ts-node src/graphql/generate-graphql-types.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -23,7 +22,12 @@
     "db:migrate:dev": "npx prisma migrate dev",
     "db:migrate:prod": "npx prisma migrate deploy",
     "db:seed": "ts-node src/prisma/seed/seed.ts",
-    "skaffold": "skaffold deploy --module=postgresql --port-forward"
+    "scrape:all": "ts-node src/cli.ts scrape:all",
+    "scrape:markets": "ts-node src/cli.ts scrape:markets",
+    "scrape:comments": "ts-node src/cli.ts scrape:comments",
+    "scrape:prices": "ts-node src/cli.ts scrape:prices",
+    "scrape:price-history": "ts-node src/cli.ts scrape:price-history",
+    "runs": "ts-node src/cli.ts runs"
   },
   "dependencies": {
     "@apollo/server": "5.0.0",
@@ -36,13 +40,17 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "11.1.6",
     "@nestjs/terminus": "^11.0.0",
+    "@polymarket/clob-client": "^4.22.8",
     "@prisma/client": "6.16.3",
+    "bottleneck": "^2.19.5",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
+    "commander": "^14.0.2",
     "env-var": "^7.5.0",
     "graphql": "16.11.0",
     "graphql-subscriptions": "3.0.0",
     "graphql-tools": "^9.0.20",
+    "polymarket-data": "^0.0.1",
     "reflect-metadata": "0.2.2",
     "rimraf": "6.0.1",
     "rxjs": "7.8.2"
@@ -53,7 +61,7 @@
     "@nestjs/testing": "11.1.6",
     "@types/express": "^5.0.3",
     "@types/jest": "30.0.0",
-    "@types/node": "24.7.0",
+    "@types/node": "^24.7.0",
     "@types/supertest": "6.0.3",
     "@typescript-eslint/eslint-plugin": "8.46.0",
     "@typescript-eslint/parser": "8.46.0",
